XREAL/NREAL Air / Air 2 Pro AR glasses not recognized as non-desktop output
Both of these devices do not contain a DisplayID 2.0 block in their respective EDIDs.
I have obtained the following EDIDs from different units:
XREAL Air Sample 1
edid-decode (hex):
00 ff ff ff ff ff ff 00 36 47 32 31 00 66 66 66
08 21 01 03 80 0c 07 78 0a 9e e0 a7 54 48 99 23
10 50 54 00 00 00 01 01 01 01 01 01 01 01 01 01
01 01 01 01 01 01 02 3a 80 18 71 38 2d 40 58 2c
45 00 80 38 74 00 00 1e 03 57 80 18 71 38 2d 40
58 2c 45 00 80 38 74 00 00 1e 04 74 80 18 71 38
2d 40 58 2c 45 00 80 38 74 00 00 1e 00 00 00 fc
00 41 69 72 0a 20 20 20 20 20 20 20 20 20 00 de
----------------
Block 0, Base EDID:
EDID Structure Version & Revision: 1.3
Vendor & Product Identification:
Manufacturer: MRG
Model: 12594
Serial Number: 1717986816 (0x66666600)
Made in: week 8 of 2023
Basic Display Parameters & Features:
Digital display
Maximum image size: 12 cm x 7 cm
Gamma: 2.20
RGB color display
First detailed timing is the preferred timing
Color Characteristics:
Red : 0.6542, 0.3291
Green: 0.2841, 0.5996
Blue : 0.1396, 0.0644
White: 0.3125, 0.3281
Established Timings I & II: none
Standard Timings: none
Detailed Timing Descriptors:
DTD 1: 1920x1080 60.000000 Hz 16:9 67.500 kHz 148.500000 MHz (1920 mm x 1080 mm)
Hfront 88 Hsync 44 Hback 148 Hpol P
Vfront 4 Vsync 5 Vback 36 Vpol P
DTD 2: 1920x1080 90.000000 Hz 16:9 101.250 kHz 222.750000 MHz (1920 mm x 1080 mm)
Hfront 88 Hsync 44 Hback 148 Hpol P
Vfront 4 Vsync 5 Vback 36 Vpol P
DTD 3: 1920x1080 120.000000 Hz 16:9 135.000 kHz 297.000000 MHz (1920 mm x 1080 mm)
Hfront 88 Hsync 44 Hback 148 Hpol P
Vfront 4 Vsync 5 Vback 36 Vpol P
Display Product Name: 'Air'
Checksum: 0xde
----------------
Warnings:
Block 0, Base EDID:
Basic Display Parameters & Features: Dubious maximum image size (12x7 is smaller than 10x10 cm).
Failures:
Block 0, Base EDID:
Detailed Timing Descriptor #1: Mismatch of image size 1920x1080 mm vs display size 120x70 mm.
Detailed Timing Descriptor #2: Mismatch of image size 1920x1080 mm vs display size 120x70 mm.
Detailed Timing Descriptor #3: Mismatch of image size 1920x1080 mm vs display size 120x70 mm.
Missing Display Range Limits Descriptor.
EDID:
Base EDID: The DTD max image size is 1920x1080mm, which is larger than the display size 120.0x70.0mm.
EDID conformity: FAIL
XREAL Air Sample 2
edid-decode (hex):
00 ff ff ff ff ff ff 00 36 47 32 31 00 66 66 66
08 21 01 03 80 0c 07 78 0a 9e e0 a7 54 48 99 23
10 50 54 00 00 00 01 01 01 01 01 01 01 01 01 01
01 01 01 01 01 01 02 3a 80 18 71 38 2d 40 58 2c
45 00 80 38 74 00 00 1e 02 3a 80 18 71 38 2d 40
58 2c 45 00 80 38 74 00 00 1e 00 00 00 fd 00 32
82 14 3c 3c 00 0a 20 20 20 20 20 20 00 00 00 fc
00 41 69 72 0a 20 20 20 20 20 20 20 20 20 00 2e
----------------
Block 0, Base EDID:
EDID Structure Version & Revision: 1.3
Vendor & Product Identification:
Manufacturer: MRG
Model: 12594
Serial Number: 1717986816 (0x66666600)
Made in: week 8 of 2023
Basic Display Parameters & Features:
Digital display
Maximum image size: 12 cm x 7 cm
Gamma: 2.20
RGB color display
First detailed timing is the preferred timing
Color Characteristics:
Red : 0.6542, 0.3291
Green: 0.2841, 0.5996
Blue : 0.1396, 0.0644
White: 0.3125, 0.3281
Established Timings I & II: none
Standard Timings: none
Detailed Timing Descriptors:
DTD 1: 1920x1080 60.000000 Hz 16:9 67.500 kHz 148.500000 MHz (1920 mm x 1080 mm)
Hfront 88 Hsync 44 Hback 148 Hpol P
Vfront 4 Vsync 5 Vback 36 Vpol P
DTD 2: 1920x1080 60.000000 Hz 16:9 67.500 kHz 148.500000 MHz (1920 mm x 1080 mm)
Hfront 88 Hsync 44 Hback 148 Hpol P
Vfront 4 Vsync 5 Vback 36 Vpol P
Display Range Limits:
Monitor ranges (GTF): 50-130 Hz V, 20-60 kHz H, max dotclock 600 MHz
Display Product Name: 'Air'
Checksum: 0x2e
----------------
Warnings:
Block 0, Base EDID:
Basic Display Parameters & Features: Dubious maximum image size (12x7 is smaller than 10x10 cm).
EDID:
Base EDID: Some timings are out of range of the Monitor Ranges:
Horizontal Freq: 67.500 - 67.500 kHz (Monitor: 20.000 - 60.000 kHz)
Failures:
Block 0, Base EDID:
Detailed Timing Descriptor #1: Mismatch of image size 1920x1080 mm vs display size 120x70 mm.
Detailed Timing Descriptor #2: Mismatch of image size 1920x1080 mm vs display size 120x70 mm.
EDID:
Base EDID: The DTD max image size is 1920x1080mm, which is larger than the display size 120.0x70.0mm.
EDID conformity: FAIL
XREAL Air 2 Pro
edid-decode (hex):
00 ff ff ff ff ff ff 00 36 47 35 31 00 88 88 88
08 21 01 03 80 0c 07 78 0a 9e e0 a7 54 48 99 23
10 50 54 00 00 00 01 01 01 01 01 01 01 01 01 01
01 01 01 01 01 01 02 3a 80 18 71 38 2d 40 58 2c
45 00 80 38 74 00 00 1e 03 57 80 18 71 38 2d 40
58 2c 45 00 80 38 74 00 00 1e 04 74 80 18 71 38
2d 40 58 2c 45 00 80 38 74 00 00 1e 00 00 00 fc
00 41 69 72 20 32 20 50 72 6f 0a 20 20 20 00 92
----------------
Block 0, Base EDID:
EDID Structure Version & Revision: 1.3
Vendor & Product Identification:
Manufacturer: MRG
Model: 12597
Serial Number: 2290649088 (0x88888800)
Made in: week 8 of 2023
Basic Display Parameters & Features:
Digital display
Maximum image size: 12 cm x 7 cm
Gamma: 2.20
RGB color display
First detailed timing is the preferred timing
Color Characteristics:
Red : 0.6542, 0.3291
Green: 0.2841, 0.5996
Blue : 0.1396, 0.0644
White: 0.3125, 0.3281
Established Timings I & II: none
Standard Timings: none
Detailed Timing Descriptors:
DTD 1: 1920x1080 60.000000 Hz 16:9 67.500 kHz 148.500000 MHz (1920 mm x 1080 mm)
Hfront 88 Hsync 44 Hback 148 Hpol P
Vfront 4 Vsync 5 Vback 36 Vpol P
DTD 2: 1920x1080 90.000000 Hz 16:9 101.250 kHz 222.750000 MHz (1920 mm x 1080 mm)
Hfront 88 Hsync 44 Hback 148 Hpol P
Vfront 4 Vsync 5 Vback 36 Vpol P
DTD 3: 1920x1080 120.000000 Hz 16:9 135.000 kHz 297.000000 MHz (1920 mm x 1080 mm)
Hfront 88 Hsync 44 Hback 148 Hpol P
Vfront 4 Vsync 5 Vback 36 Vpol P
Display Product Name: 'Air 2 Pro'
Checksum: 0x92
----------------
Warnings:
Block 0, Base EDID:
Basic Display Parameters & Features: Dubious maximum image size (12x7 is smaller than 10x10 cm).
Failures:
Block 0, Base EDID:
Detailed Timing Descriptor #1: Mismatch of image size 1920x1080 mm vs display size 120x70 mm.
Detailed Timing Descriptor #2: Mismatch of image size 1920x1080 mm vs display size 120x70 mm.
Detailed Timing Descriptor #3: Mismatch of image size 1920x1080 mm vs display size 120x70 mm.
Missing Display Range Limits Descriptor.
EDID:
Base EDID: The DTD max image size is 1920x1080mm, which is larger than the display size 120.0x70.0mm.
EDID conformity: FAIL
So this gives us the following vendor and product IDs that need a non-desktop quirk:
-
MRG 0x3132
(XREAL Air) -
MRG 0x3135
(XREAL Air 2 Pro)
Edited by Sefa Eyeoglu