drm/edid: add non-desktop quirk to XREAL Air/Air 2 Pro

Both devices lack a DisplayID 2.0 block and therefore do not advertise
themselves as HMDs.

See https://gitlab.freedesktop.org/drm/misc/kernel/-/issues/53

Signed-off-by: Sefa Eyeoglu <contact@scrumplex.net>